cert/virtual.yaml
#cat <<EOF | kubectl apply -f -
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: httpbin
spec:
  hosts:
  - gitlab-deployment.svc.cluster.local
  gateways:
  - mygateway
  http:
  - match:
    - uri:
        prefix: /
    #- uri:
     #   prefix: /delay
    route:
    - destination:
        port:
          number: 80
        host: gitlab-deployment.postgres.svc.cluster.local
