cert/vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: my-service-vs
spec:
  hosts:
    - "*"
  gateways:
    - mygateway
  http:
    - route:
        - destination:
            host: gitlab-deployment.postgres.svc.cluster.local # Name of your service
            port:
              number: 80
